--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "nodemon --exec ts-node server.ts",
+    "start": "nodemon --exec server.ts",
     "build": "tsc -p tsconfig.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "jest": "^27.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
     "nodemon": "^2.0.7",
-    "ts-node": "^10.0.0",
-    "ts-node-dev": "^1.1.6"
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
